--- a/style.css
+++ b/style.css
@@ -7,26 +7,25 @@ Version:        1.0
 */
 
 
-* {
-    background-color: #a3c1ad;
+body {
+    background-color: #696D7D;
+    font-family: 'Oswald', sans-serif;
 }
+
 
 p {
-    color: #317873;
-    font-family: 'Montserrat', sans-serif;
+    color: #354951;
+    text-indent: 50px;
 }
 
-.rb_black_text{
-    color:#000000;
+.rb_light_text{
+    color:#fff7b6;
 }
-.rb_ink_text{
-    color:#062f4f;
+.rb_subsection_title{
+    color:#2f723e;
 }
-.rb_posy_text{
-    color:#813772;
-}
-.rb_embers_text{
-    color:#B82601;
+.rb_large_title{
+    color:#94574c;
 }
 .title_bar{
     
@@ -34,10 +33,54 @@ p {
 .mainLogo{
     
 }
-h1,h2,h3,h4,h5,h6{
-    font-family: 'Source Code Pro', monospace;
-    color: #062f4f;
+.rb_brown_box{
+    background-color:#E1F2FE;
 }
 h1,h2{
     text-align: center;
+    color:#064789;
+    font-weight: bold;
+}
+h3{
+    color:#064789;
+    font-weight: bold;
+}
+
+#boxshadow {
+    position: relative;
+    -moz-box-shadow: 1px 2px 4px rgba(0, 0, 0,0.5);
+    -webkit-box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
+    padding: 10px;
+    background:#E1F2FE;
+}
+#boxshadow img {
+    width: 100%;
+    border: 1px solid #8a4419;
+    border-style: inset;
+}
+
+
+.container-fluid{
+    max-width: 1000px;
+}
+
+.center-justified{
+  text-align: justify;
+  margin: 0 auto;
+}
+
+
+.hacky-hyperlink{ 
+  position:absolute; 
+  width:100%;
+  height:100%;
+  top:0;
+  left: 0;
+
+  z-index: 1;
+
+  /* fixes overlap error in IE7/8, 
+     make sure you have an empty gif */
+  background-image: url('./image/empty.gif');
 }
